# pubfun

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  artifacts.json  changelog.rss  index.html  justfile  oranda.json  pubfun-installer.ps1.txt  pubfun-installer.sh.txt  test.md
.github/workflows/: verify.yaml
artifacts/: index.html
changelog/: index.html
changelog/v0.1.0/: index.html
changelog/v0.1.1/: index.html
changelog/v0.1.2/: index.html
changelog/v0.1.3/: index.html
justfiles/: linting.just
src/: files.rs  inspector.rs  main.rs
src/kotlin/: tree.rs
testfiles/: Test.kt
wix/: main.wxs
