[package]
name = "pubfun"
version = "0.1.3"
edition = "2024"
authors = ["Silen Celeste Locatelli", "LunchTimeCode"]
description = "A tool to extract public functions from Kotlin files."
repository = "https://github.com/LunchTimeCode/pubfun"
homepage = "https://github.com/LunchTimeCode/pubfun"
license-file = "LICENSE"
categories = ["command-line-interface"]
keywords = ["cli", "kotlin", "doc"]

[package.metadata.wix]
upgrade-guid = "DFCEACEC-3BD7-4578-A11C-026A75775002"
path-guid = "18884E63-B9DB-4764-91F9-111B3B7D67BA"
license = false
eula = false

[dependencies]
glob = "0.3.2"
tree-sitter = "0.22"
tree-sitter-kotlin = "0.3.8"
itertools = "0.14"

[build-dependencies]
cc="*"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "LunchTimeCode/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@lunchtimecode"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew", "npm"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
# Whether cargo-dist should create a Github Release or use an existing draft
create-release = false
